style.css
*{
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: Arial, sans-serif;
}

body{
  height: 100vh;
  display: flex;
  justify-content: center;
  background: #f2f2f2;
}

.app{
    height: 500px;
    width:350px;
    padding: 20px;
    margin-top: 100px;
    border-radius: 8px;
    box-shadow: 0 0 15px rgb(202, 87, 87);
    border-radius: 20px;
}
h1{
    text-align: center;
    margin-bottom: 15px;
}
input{
  /* flex: 1; */
  padding: 8px;
  border: 1px solid #ccc;
  border-radius: 4px;
}
.input-box{
    width: 300px;
    height: 100px;
    border: 2px solid black;
    padding: 20px;
    border-radius: 20px;
}
button{
  padding: 8px 12px;
  border: none;
  background: #4caf50;
  color: white;
  border-radius: 4px;
  cursor: pointer;
}
button:hover{
  background: #45a049;
}
.print{
    width: 300px;
    height: 200px;
    padding: 20px;
    margin-top:20px ;
    border: 2px solid black;
    border-radius: 20px;
}
/* homework : personal task manager ,delete,complete task */
.todo{
  display: flex;
  justify-content: space-between;
  align-items: center;
  background: #eee;
  padding: 8px;
  margin-bottom: 8px;
  border-radius: 4px;
  color: rgb(8, 15, 12);
}
.delete-btn{
  color: red;
  font-weight: bold;
  font-size: 16px;
  cursor: pointer;
  transition: 0.3s;
}

.delete-btn:hover{
  color: darkred;
  transform: scale(1.2);
}

